cluster/apps/websites/studi-conf/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: studi-conf
  namespace: websites
spec:
  selector:
    app: studi-conf
  ports:
  - port: 8080
    targetPort: website
