cluster/apps/websites/studi-conf/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: studi-conf
  namespace: websites
spec:
  parentRefs:
    - name: nginx-external
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - studi-conf.${DOMAIN}
  rules:
    - backendRefs:
        - name: studi-conf
          port: 8080
